# PRSM-CLI

./: .gitignore  .mcp.json  README.md  build.sh  demo_settings.py  install.bat  install.sh  publish.sh  pyproject.toml  start_prsm_server.sh
.gemini/: settings.json
.prism/: .mcp.json  command_blacklist.txt  models.yaml  prsm.yaml
docs/: adapters.md  architecture.md  configuration.md  data-flow.md  engine.md  feature_requests_source_of_truth_2026-02-17.md  file-change-tracking.md  orchestration-runbook.md  shared.md  transcript-import-design.md  tui.md  vscode.md
examples/: rationale_extraction_example.py
prsm/: __init__.py  app.py
scripts/: codex-minimax  regenerate_session_titles.py  verify_superego_runtime.sh
tests/: TEST_COVERAGE_PROVIDER_PARSING.md  test_adapters_bridge_model_methods.py  test_agent_manager_naming.py  test_agent_session_task_complete.py  test_agent_tree_icons.py  test_alibaba_provider.py  test_app_import_prompt.py  test_bash_interrupt.py  test_bash_permission_patterns.py  test_bash_redirect_scratch_policy.py  test_codex_provider_mcp_call.py  test_command_policy_templates.py  test_delivery_mode.py  test_event_processor_thinking.py  test_file_tracker_tool_aliases.py  test_gemini_provider.py  test_mcp_children_status.py  test_minimax_provider.py  test_model_aliases.py  test_non_claude_default_model.py  test_orch_bridge_file_tools.py  test_orch_proxy_bridge_client.py  test_phase1_multi_project.py  test_phase2.py  test_phase2_multi_project_server.py  test_phase3.py  test_phase3_multi_project_server.py  test_phase4.py  test_phase5.py  (+26 more)
(+145 files in other folders)
