[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prsm-cli"
version = "0.1.1"
description = "Terminal UI for multi-agent orchestration"
requires-python = ">=3.12"
dependencies = [
    "textual>=4.0.0",
    "rich>=13.0",
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
web = ["textual-serve>=1.0.0"]
dev = [
    "textual-dev>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
prsm = "prsm.app:main"

[tool.hatch.build.targets.wheel]
packages = ["prsm"]
